test/corpus/aliases.txt
===
#REPLACE
===

#REPLACE FOO BAR
#REPLACE FOO "Hello"
#REPLACE FOO 1234
#REPLACE MYTABLE.MYFIELD |FN2,0

---

(source_file
  (replace_declaration
    (keyword)
    name: (simple_identifier)
    value: (simple_identifier))
  (replace_declaration
    (keyword)
    name: (simple_identifier)
    value: (string_literal))
  (replace_declaration
    (keyword)
    name: (simple_identifier)
    value: (number_literal))
  (replace_declaration
    (keyword)
    name: (postfix_expression
      name: (simple_identifier)
      (member_access
        name: (simple_identifier)))
    value: (icode_argument)))

===
Define
===

Define Foo
Define Foo for 1
Define Foo for "Hello"
Define Foo for Integer
Define Foo for |CI$00100000

---

(source_file
  (define_declaration
    (keyword)
    name: (identifier))
  (define_declaration
    (keyword)
    name: (identifier)
    (keyword)
    value: (number_literal))
  (define_declaration
    (keyword)
    name: (identifier)
    (keyword)
    value: (string_literal))
  (define_declaration
    (keyword)
    name: (identifier)
    (keyword)
    value: (simple_identifier))
  (define_declaration
    (keyword)
    name: (identifier)
    (keyword)
    value: (icode_argument)))

===
Enum_List
===

Enum_List
    Define Foo for 1
    Define Bar
End_Enum_List

---

(source_file
  (enum_declaration
    (enum_header
      (keyword))
    (define_declaration
      (keyword)
      name: (identifier)
      (keyword)
      value: (number_literal))
    (define_declaration
      (keyword)
      name: (identifier))
    (enum_footer
      (keyword))))
