test/corpus/classes.txt
===
Simple class
===

Class cFoo is a cBar
End_Class

---

(source_file
  (class_definition
    (class_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (class_footer
      (keyword))))

===
Class with mixin
===

Class cFoo is a cBar
    Import_Class_Protocol cMyMixin
End_Class

---

(source_file
  (class_definition
    (class_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (mixin_class
      (keyword)
      name: (identifier))
    (class_footer
      (keyword))))

===
Composite with objects and mixin
===

Composite cFoo is a cBar
    Import_Class_Protocol cMyMixin

    Set pbEnabled to True

    Object oPromptList is a cWebPromptList
        Set pbFillHeight to True
        Set piColumnSpan to 6
    End_Object

End_Composite

---

(source_file
  (composite_definition
    (composite_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (mixin_class
      (keyword)
      name: (identifier))
    (set_statement
      (keyword)
      name: (identifier)
      (keyword)
      (identifier))
    (object_definition
      (object_header
        (keyword)
        name: (identifier)
        (keyword)
        (keyword)
        superclass: (identifier))
      (set_statement
        (keyword)
        name: (identifier)
        (keyword)
        (identifier))
      (set_statement
        (keyword)
        name: (identifier)
        (keyword)
        (number_literal))
      (object_footer
        (keyword)))
    (composite_footer
      (keyword))))
