test/corpus/expressions.txt
===
Identifier expression
===

Move foo to bar

---

(source_file
  (move_statement
    (keyword)
    (simple_identifier)
    (keyword)
    (simple_identifier)))

===
Literal expression
===

Move "foo" to bar
Move 1234 to bar
Move @"multi-line
string literal" to bar
Move """multi-line
string literal""" to bar

---

(source_file
  (move_statement
    (keyword)
    (string_literal)
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (number_literal)
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (multiline_string_literal)
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (multiline_string_literal)
    (keyword)
    (simple_identifier)))

===
Postfix expression member access
===

Move foo.bar to bar
Move bar to foo.bar
Get bar to foo.bar

---

(source_file
  (move_statement
    (keyword)
    (postfix_expression
      name: (simple_identifier)
      (member_access
        name: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (simple_identifier)
    (keyword)
    (postfix_expression
      name: (simple_identifier)
      (member_access
        name: (simple_identifier))))
  (get_statement
    (keyword)
    name: (identifier)
    (keyword)
    result: (postfix_expression
      name: (simple_identifier)
      (member_access
        name: (simple_identifier)))))

===
Postfix expression nested member access
===

Move foo.bar.baz to baz

---

(source_file
  (move_statement
    (keyword)
    (postfix_expression
      name: (simple_identifier)
      (member_access
        name: (simple_identifier))
      (member_access
        name: (simple_identifier)))
    (keyword)
    (simple_identifier)))

===
Postfix expression incomplete member access
===

Move foo. to baz

---

(source_file
  (move_statement
    (keyword)
    (postfix_expression
      name: (simple_identifier)
      (member_access))
    (keyword)
    (simple_identifier)))

===
Postfix expression array access
===

Move foo[0] to bar

---

(source_file
  (move_statement
    (keyword)
    (postfix_expression
      name: (simple_identifier)
      (array_access
        (number_literal)))
    (keyword)
    (simple_identifier)))

===
Postfix expression multi-dim array access
===

Move foo[0][0] to bar

---

(source_file
  (move_statement
    (keyword)
    (postfix_expression
      name: (simple_identifier)
      (array_access
        (number_literal))
      (array_access
        (number_literal)))
    (keyword)
    (simple_identifier)))

===
Postfix expression nested array member access
===

Move foo.bar[0].baz to baz

---

(source_file
  (move_statement
    (keyword)
    (postfix_expression
      name: (simple_identifier)
      (member_access
        name: (simple_identifier))
      (array_access
        (number_literal))
      (member_access
        name: (simple_identifier)))
    (keyword)
    (simple_identifier)))

===
Paren expression
===

Move (foo) to bar
Move ("foo") to bar
Move (1234) to bar

---

(source_file
  (move_statement
    (keyword)
    (paren_expression
      (simple_identifier))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (string_literal))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (number_literal))
    (keyword)
    (simple_identifier)))

===
Paren unary expression
===

Move (-1) to bar
Move (-1 + 1) to bar
Move (1 + -1) to bar
Move (-foo) to bar
Move (not foo) to bar
Move (not foo and bar) to bar
Move (not(foo) and bar) to bar

---

(source_file
  (move_statement
    (keyword)
    (paren_expression
      (number_literal))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (number_literal)
        operand: (number_literal)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (number_literal)
        operand: (number_literal)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (unary_expression
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (unary_expression
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (unary_expression
          (keyword)
          operand: (simple_identifier))
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (unary_expression
          (keyword)
          operand: (paren_expression
            (simple_identifier)))
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier)))

===
Paren binary expression
===

Move (foo + bar) to bar
Move ("foo" + bar) to bar
Move (1234 + 5678) to bar
Move (foo + 1234 - 5678) to bar
Move (foo and bar) to bar
Move (foo or bar) to bar
Move (foo = bar) to bar
Move (foo <> bar) to bar
Move (foo < bar) to bar
Move (foo > bar) to bar
Move (foo <= bar) to bar
Move (foo >= bar) to bar
Move (foo contains bar) to bar
Move (foo matches bar) to bar
Move (foo iand bar) to bar
Move (foo ior bar) to bar
Move (foo max bar) to bar
Move (foo min bar) to bar

---

(source_file
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (string_literal)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (number_literal)
        operand: (number_literal)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (binary_expression
          operand: (simple_identifier)
          operand: (number_literal))
        operand: (number_literal)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (binary_expression
        operand: (simple_identifier)
        (keyword)
        operand: (simple_identifier)))
    (keyword)
    (simple_identifier)))

===
Paren call expression
===

Move (foo()) to bar
Move (foo(1, 2 + 2, 3)) to bar
Move (foo(1, bar(), 3)) to bar

---

(source_file
  (move_statement
    (keyword)
    (paren_expression
      (call_expression
        name: (simple_identifier)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (call_expression
        name: (simple_identifier)
        argument: (number_literal)
        argument: (binary_expression
          operand: (number_literal)
          operand: (number_literal))
        argument: (number_literal)))
    (keyword)
    (simple_identifier))
  (move_statement
    (keyword)
    (paren_expression
      (call_expression
        name: (simple_identifier)
        argument: (number_literal)
        argument: (call_expression
          name: (simple_identifier))
        argument: (number_literal)))
    (keyword)
    (simple_identifier)))
