test/corpus/linecontinuation.txt
===
Line continuation
===

Function test Integer iArg1;
              Integer iArg2;
              Returns Integer
End_Function

---

(source_file
  (function_definition
    (function_header
      (keyword)
      name: (identifier)
      (parameter
        type: (system_typedecl
          (system_type))
        name: (identifier))
      (parameter
        type: (system_typedecl
          (system_type))
        name: (identifier))
      (keyword)
      return_type: (system_typedecl
        (system_type)))
    (function_footer
      (keyword))))
