test/corpus/properties.txt
===
Object property
===

Object oFoo is a cBar
    Property Integer piTest
End_Object

---

(source_file
  (object_definition
    (object_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (property_definition
      (keyword)
      type: (system_typedecl
        (system_type))
      name: (identifier))
    (object_footer
      (keyword))))

===
Object property with initializer
===

Object oFoo is a cBar
    Property Integer piTest 1
End_Object

---

(source_file
  (object_definition
    (object_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (property_definition
      (keyword)
      type: (system_typedecl
        (system_type))
      name: (identifier)
      (number_literal))
    (object_footer
      (keyword))))

===
Class property
===

Class cFoo is a cBar
    Procedure Construct_Object
        Property Integer piTest
    End_Procedure
End_Class

---

(source_file
  (class_definition
    (class_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (procedure_definition
      (procedure_header
        (keyword)
        name: (identifier))
      (property_definition
        (keyword)
        type: (system_typedecl
          (system_type))
        name: (identifier))
      (procedure_footer
        (keyword)))
    (class_footer
      (keyword))))

===
Class property with initializer
===

Class cFoo is a cBar
    Procedure Construct_Object
        Property Integer piTest 1
    End_Procedure
End_Class

---

(source_file
  (class_definition
    (class_header
      (keyword)
      name: (identifier)
      (keyword)
      (keyword)
      superclass: (identifier))
    (procedure_definition
      (procedure_header
        (keyword)
        name: (identifier))
      (property_definition
        (keyword)
        type: (system_typedecl
          (system_type))
        name: (identifier)
        (number_literal))
      (procedure_footer
        (keyword)))
    (class_footer
      (keyword))))
